# Rust-Atproto-SDK

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  namespace_impls.rs
codegen/: Cargo.toml  README.md
codegen/src/: codegen.rs  lexicon.rs  main.rs
docs/: AGENT_API.md  AGENT_INTEGRATION_COMPLETE.md  BLOB_UPLOAD_IMPLEMENTATION.md  EXTERNAL_EMBEDS.md  IMPLEMENTATION_STATUS.md  MODERATION_SYSTEM_COMPLETE.md  NEXT_STEPS.md  OAUTH_IMPLEMENTATION.md  PARITY_ANALYSIS.md  REPLY_IMPLEMENTATION_SUMMARY.md  REPLY_SUPPORT.md  RUST_SDK_FILES.md  SESSION_PERSISTENCE.md  TRANSLATION_PLAN.md  TYPESCRIPT_COMPARISON.md  TYPESCRIPT_SDK_FILES.md  WEBSOCKET_SUBSCRIPTIONS.md
examples/: agent_demo.rs  firehose_monitor.rs  link_embed_demo.rs  moderation_demo.rs  oauth_demo.rs  oauth_flow.rs  persistent_session.rs  reply_demo.rs  rich_text_demo.rs  simple_bot.rs  upload_image.rs
src/: agent.rs  blob.rs  car.rs  consts.rs  did_doc.rs  handle.rs  lib.rs  mst.rs  namespaces.rs  preferences.rs  repo.rs  server_auth.rs  session_manager.rs  syntax.rs  tid.rs  types.rs  util.rs  validation.rs  xrpc_subscription.rs
src/client/: mod.rs
src/client/app/: mod.rs
src/client/app/bsky/: mod.rs
src/client/app/bsky/actor/: defs.rs  get_preferences.rs  get_profile.rs  get_profiles.rs  get_suggestions.rs  mod.rs  profile.rs  put_preferences.rs  search_actors.rs  search_actors_typeahead.rs  status.rs
src/client/app/bsky/bookmark/: create_bookmark.rs  defs.rs  delete_bookmark.rs  (+2 more)
src/client/chat/bsky/: mod.rs
src/client/com/: mod.rs
src/client/com/atproto/: mod.rs
src/client/tools/: mod.rs
src/client/tools/ozone/: mod.rs
src/moderation/: decision.rs  labels.rs  mod.rs  subjects.rs  types.rs  ui.rs
src/oauth/: callback.rs  client.rs  dpop.rs  mod.rs  pkce.rs  state.rs  types.rs
src/rich_text/: detection.rs  mod.rs  rich_text.rs  sanitization.rs  text.rs  unicode.rs  util.rs
src/xrpc/: mod.rs
tests/: agent_methods_test.rs  integration_tests.rs  moderation_test.rs  notifications_test.rs  preferences_methods_test.rs  real_world_auth_tests.rs  simple_integration.rs  simple_real_world_test.rs
(+309 files in other folders)
